--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -28,7 +28,20 @@ button {
     margin: auto;
     text-align: left
 }
-
+#idkwhatimdoing {
+    width:150px;
+    height: 30px;
+    color: black;
+    background: #F2F2F2;
+    font-weight: bold;
+    font-family: Typewriter;
+    border: 3px solid #127A20;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 140%;
+    transition-duration: 0.2s;
+    margin: auto;
+}
 #TTbuttons {
     font-family: Typewriter;
 }
